# IntegratedStepper

./: .gitignore  README.md
Firmware/SimpleFOC_ESP32/src/: main.cpp
Mechanical/: NEMA17_NEMA11_Adapter.3MF  NEMA17_NEMA11_Adapter.SLDPRT
PCB/IntegratedStepper/: DRV8844.kicad_sch  DRV8844.kicad_sch-bak  ESP32_MCU.kicad_sch  Input_RJ45.kicad_sch  IntegratedStepper.kicad_pcb  IntegratedStepper.kicad_prl  IntegratedStepper.kicad_pro  IntegratedStepper.kicad_sch  Magnetic_Encoder.kicad_sch  RS485.kicad_sch  Stepper_Outputs.kicad_sch  fp-info-cache
PCB/IntegratedStepper/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
TestBoards/DRV-Tester/DRV-Tester/: COM_GPIO.kicad_sch  DRV-Tester.kicad_pcb  DRV-Tester.kicad_prl  DRV-Tester.kicad_pro  DRV-Tester.kicad_sch  DRV8243.kicad_sch  DRV8244.kicad_sch  DRV8245.kicad_sch  DRV_GPIO.kicad_sch  Input_RJ45.kicad_sch  Stepper_Outputs.kicad_sch  Stepper_Outputs_2.kicad_sch  fp-info-cache
controller/: README.md  pyproject.toml
controller/src/integrated_stepper_controller/: __main__.py  controller.py
firmware/lib/simplefoc_can/: CANDriver.cpp
pcb/: IntegratedStepper.step
